# visionflow

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup_dev.py
docs/: ARCHITECTURE_DIAGRAM.md  CODE_CORRECTIONS.md  COMPLETION_REPORT.md  INDEX.md  PACKAGE_VERIFICATION_REPORT.md  PROJECT_SUMMARY.md  PUBLISHING.md  VERIFICATION_COMPLETE.md  architecture.md
tests/: conftest.py  debug_file_source.py  test_config.py  test_events.py  test_metrics.py  test_outputs.py  test_pipeline.py  test_sources.py  test_workers.py  test_yolo.py
tests/examples/: basic_detection.py  custom_handlers.py  multi_source_api.py  yolo_demo.py
visionflow/: __init__.py
visionflow/cli/: __init__.py  main.py
visionflow/config/: __init__.py  config.py
visionflow/core/: __init__.py  pipeline.py
visionflow/events/: __init__.py  engine.py  event.py  generator.py
visionflow/ingestion/: __init__.py  base.py  file.py  rtsp.py  webcam.py
visionflow/outputs/: __init__.py  api.py  base.py  dispatcher.py  file.py  kafka.py  log.py  mqtt.py  websocket.py
visionflow/processing/: __init__.py  base.py  middleware.py  ocr.py  pool.py  yolo.py
visionflow/utils/: __init__.py  metrics.py
